# mmapzstd

./: CHANGELOG.md  Cargo.toml  README.md  RESEARCH.md  pandoc-nolm.tex
benches/: decompress.rs  levels.rs
docs/: bench-results.md  bufreader-hypotheses.md  cli-results.md  design.md  level9-bench.md  perf-baseline.md  perf-hypotheses.md  streaming-bench.md  streaming-design.md
examples/: gen_fixture.rs  measure_baseline.rs  measure_bufreader_hugepage.rs  measure_bufreader_variants.rs  measure_mmap.rs  measure_mmap_hugepage.rs
src/: decoder.rs  lib.rs
tests/: cli_smoke.rs
