[package]
name = "mmapzstd"
# 0.3.0: add Decoder::open_hugepage_streaming (S3 streaming hugepage); see CHANGELOG
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
description = "mmap-backed zstd decompressor with backpressure"
license = "MIT OR Apache-2.0"

[lib]
name = "mmapzstd"
path = "src/lib.rs"

[dependencies]
memmap2 = "0.9.10"
zstd = "0.13.3"
clap = { version = "=4.4.18", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.3", default-features = false }
tempfile = ">=3.10, <3.15"
rand = "0.8"
libc = "0.2"

[[bin]]
name = "mmapzstd-bench"
path = "src/bin/bench.rs"

[[bench]]
name = "decompress"
harness = false

[[bench]]
name = "levels"
harness = false
